# CROSSFADE

./: .gitignore  CONCEPT.md  README.md  pyproject.toml
notebooks/: 01_explore_and_embed.ipynb  02_temporal_transitions.ipynb  03_compartment_transitions.ipynb  04_gene_transitions.ipynb  05_circadian.ipynb
scripts/: embed_combined.py
src/temporal_foundation/: __init__.py  aggregation.py  config.py  data.py  embeddings.py
