[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-foundation"
version = "0.1.0"
description = "Temporal transition model for spatial transcriptomics disease dynamics"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "squidpy>=1.4",
    "novae>=0.2",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
